Fixed icon alignment on mobile

--- a/css/style.scss
+++ b/css/style.scss
@@ -107,6 +107,11 @@ body {
     p {
       font-size: 1rem;
     }
+
+    #social-wrap {
+      flex-wrap: wrap;
+      width: 260px;
+    }
     
   }
 }
